--- a/html/ListView.html
+++ b/html/ListView.html
@@ -185,12 +185,22 @@
             <div class="main-content">
                 
 <p></p>
+<p class="rvps2"><span class="rvts6">Desktop only</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Displays information as a list - can be switched to </span><a class="rvts11" href="GridView.html">Grid</a><span class="rvts6">&nbsp;view at top right of the window</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem78.png"></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
+<li value="1" class="rvps2"><a class="rvts11" href="GridView.html">Grid</a><span class="rvts6">&nbsp;/ </span><span class="rvts6">List</span><span class="rvts6">&nbsp;view switcher</span></li>
+<li value="2" class="rvps2"><span class="rvts6">Sorting order</span><br/><img alt="" style="padding : 1px;" src="lib/NewItem81.png"></li>
+</ol>
 <p></p>
 <p class="rvps4" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com">Free PDF documentation generator</a></p>
 
             </div>
             
-            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved.</div></div>
+            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
         </div>  <!-- /#topic-content -->
     </article>
 
