--- a/html/MaterialSettings.html
+++ b/html/MaterialSettings.html
@@ -195,6 +195,7 @@
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts16">Important Note</span><span class="rvts6">.</span></p>
 <p class="rvps2"><span class="rvts6">All Material settings are browser / device specific and are stored locally on your device</span></p>
+<p class="rvps2"><span class="rvts6">If Material is updated then you may need to clear your browser's cache to pick up changes</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem20.png"></p>
@@ -208,7 +209,32 @@
 <li value="5" class="rvps2"><span class="rvts6">Determines the level of volume change when you move the volume slider.</span></li>
 <li value="6" class="rvps2"><span class="rvts6">Keyboard shortcuts</span><br/><img alt="" style="padding : 1px;" src="lib/NewItem24.png"></li>
 </ol>
-<p class="rvps5"><span class="rvts6">Click ? to view a list of available keyboard shortcuts</span></p>
+<p class="rvps5"><span class="rvts6">Click ? to view a list of available keyboard shortcuts</span><br/><span class="rvts6">Alt+▲ • Increase volume</span></p>
+<p class="rvps5"><span class="rvts6">Alt+▼ • Decrease volume</span></p>
+<p class="rvps5"><span class="rvts6">Alt+&lt; • Previous track</span></p>
+<p class="rvps5"><span class="rvts6">Alt+&gt; • Next track</span></p>
+<p class="rvps5"><span class="rvts6">Spacebar • Play/pause</span></p>
+<p class="rvps5"><span class="rvts6">Home • Go to homescreen</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+&lt; • Go back</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+F • Search</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+Shift+P • Play now</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+Shift+A • Append to queue</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+Shift+C • Add favorite, podcast, or preset</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+Shift+M • Create folder</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+D • Show current track information</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+Shift+E • Expand now playing</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+S • Save queue</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+X • Clear queue</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+M • Move queue to another player</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+U • Add URL to queue</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+T • Scroll queue to current track</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+G • Settings</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+P • Player settings</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+E • Server settings</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+I • Information</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+A • Manage players</span></p>
+<p class="rvps5"><span class="rvts6">Ctrl+B • Synchronise</span></p>
+<p class="rvps5"><span class="rvts6">Alt+N • Switch to Nth player</span><br/><span class="rvts6"><br/></span></p>
 <p class="rvps5"><span class="rvts6">Enabled / Disabled</span></p>
 <p class="rvps5"><img alt="" style="padding : 1px;" src="lib/NewItem22.png"><span class="rvts6">&nbsp;</span><img alt="" style="padding : 1px;" src="lib/NewItem23.png"></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
@@ -229,7 +255,8 @@
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem27.png"></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><a name="HomeScreenItems"></a>
+<span class="rvts6"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
 <li value="1" class="rvps2"><span class="rvts6">Determines which standard LMS items are displayed on the </span><a class="rvts11" href="HomeScreen.html">Home Screen</a><span class="rvts6">. </span><br/><span class="rvts6">These can subsequently be re-ordered via drag-and-drop except where Material is running on an iPhone.</span><br/><span class="rvts6">See also </span><a class="rvts11" href="Pinning.html">Pinning</a></li>
 </ol>
@@ -249,11 +276,12 @@
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
 <li value="1" class="rvps2"><span class="rvts6">Toggles auto-scroll to current track</span><br/><span class="rvts6">If enabled this will scroll your play queue automatically to the current track when the track changes</span><br/><span class="rvts6">The current track is highlighted</span><br/><img alt="" style="padding : 1px;" src="lib/NewItem45.png"><br/><span class="rvts6"><br/></span></li>
-<li value="2" class="rvps2"><span class="rvts6">Toggles whether </span><a class="rvts11" href="ContextMenu.html">Context Menu</a><span class="rvts6">&nbsp;is shown from click on audio item</span><br/><span class="rvts6">If enabled this will bring up the </span><a class="rvts11" href="ContextMenu.html">Context Menu</a><span class="rvts6">&nbsp;when you click anywhere on an audio item rather than requiring you to use the three vertical dot access</span><br/><img alt="" style="padding : 1px;" src="lib/NewItem46.png"><br/><span class="rvts6"><br/></span></li>
+<li value="2" class="rvps2"><a name="ShowMenu"></a>
+<span class="rvts6">Toggles whether </span><a class="rvts11" href="ContextMenu.html">Context Menu</a><span class="rvts6">&nbsp;is shown from click on audio item</span><br/><span class="rvts6">If enabled this will bring up the </span><a class="rvts11" href="ContextMenu.html">Context Menu</a><span class="rvts6">&nbsp;when you click anywhere on an audio item rather than requiring you to use the three vertical dot access</span><br/><img alt="" style="padding : 1px;" src="lib/NewItem46.png"><br/><span class="rvts6"><br/></span></li>
 <li value="3" class="rvps2"><span class="rvts6">Toggles background covert art</span><br/><span class="rvts6">If enabled cover art of the currently playing track will be displayed as background art in the </span><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;area</span></li>
 <li value="4" class="rvps2"><span class="rvts6">Toggles display of track number</span><br/><span class="rvts6">If enabled will attempt to show the track number in the </span><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;area. </span><br/><span class="rvts6">Note. Music streamed from online sources such as Spotify do not have track numbers so having this switched On is a good indicator of whether DSTM is playing local or streamed music.</span></li>
-<li value="5" class="rvps2"><span class="rvts6">Toggles display of three lines per item in </span><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;area</span></li>
-<li value="6" class="rvps2"><span class="rvts6">Toggles display of cover art of currently playing track as background to </span><a class="rvts11" href="SongInformationArea.html">Song Information</a><br/><span class="rvts6">Note. Only visible if </span><a class="rvts11" href="MusicArtistInformation.html">Music &amp; Artist Information</a><span class="rvts6">&nbsp;plugin is installed.</span></li>
+<li value="5" class="rvps2"><span class="rvts6">Toggles display of three lines per item in </span><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;area</span><br/><img alt="" style="padding : 1px;" src="lib/NewItem75.png"></li>
+<li value="6" class="rvps2"><span class="rvts6">Toggles display of cover art of currently playing track as background to </span><a class="rvts11" href="SongInformationArea.html">Song Information</a><br/><span class="rvts6">Note. Only visible if </span><span class="rvts11">Music &amp; Artist Information</span><span class="rvts6">&nbsp;plugin is installed.</span></li>
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
@@ -262,7 +290,7 @@
 
             </div>
             
-            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved.</div></div>
+            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
         </div>  <!-- /#topic-content -->
     </article>
 
