--- a/html/Pinning.html
+++ b/html/Pinning.html
@@ -185,12 +185,30 @@
             <div class="main-content">
                 
 <p></p>
+<p class="rvps2"><span class="rvts6">The basic home screen shows only the items you decided on in </span><a class="rvts11" href="MaterialSettings.html#HomeScreenItems">Settings</a></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Screenshots are of Material in </span><a class="rvts11" href="Mobile.html">Mobile</a><span class="rvts6">&nbsp;mode but pinning is exactly the same in </span><a class="rvts11" href="Desktop.html">Desktop</a><span class="rvts6">&nbsp;mode</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">You can pin additional items (not all items are available) to the Home Screen</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem91.png"></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Example</span><br/><span class="rvts6">Pinning Spotify to the Home Screen</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Navigate to Apps and click the </span><a class="rvts11" href="ContextMenu.html">Context Menu</a><span class="rvts6">&nbsp;next to Spotify and click Pin to home screen</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem97.png"></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">You can rename or unpin any pinned item from the Home Screen by clicking its </span><a class="rvts11" href="ContextMenu.html">Context Menu</a></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem98.png"></p>
 <p></p>
 <p class="rvps4" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour/iphone-website-generation">Free iPhone documentation generator</a></p>
 
             </div>
             
-            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved.</div></div>
+            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
         </div>  <!-- /#topic-content -->
     </article>
 
