--- a/html/QueueArea.html
+++ b/html/QueueArea.html
@@ -185,9 +185,9 @@
             <div class="main-content">
                 
 <p></p>
-<p class="rvps2"><span class="rvts16">Mobile</span></p>
+<p class="rvps2"><span class="rvts16">Mobile &amp; Desktop</span></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem32.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem72.png"></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
 <li value="1" class="rvps2"><span class="rvts6">This indicates that Don't Stop The Music is enabled for this player. If disabled it is replaced with a Repeat icon.</span></li>
@@ -201,13 +201,17 @@
 <li value="9" class="rvps2"><a class="rvts11" href="ContextMenu.html">Context Menu</a></li>
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">If Queue / Always Show Menu is switched Off in </span><a class="rvts11" href="MaterialSettings.html#ShowMenu">Settings</a><span class="rvts6">&nbsp;then Artist &amp; Album become hyperlinks which will open in the </span><a class="rvts11" href="BrowseArea.html">Browse</a><span class="rvts6">&nbsp;area</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem74.png"></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p></p>
 <p class="rvps4" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour/create-ebooks-for-amazon-kindle">Generate Kindle eBooks with ease</a></p>
 
             </div>
             
-            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved.</div></div>
+            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
         </div>  <!-- /#topic-content -->
     </article>
 
