--- a/html/ServerSettings.html
+++ b/html/ServerSettings.html
@@ -185,12 +185,22 @@
             <div class="main-content">
                 
 <p></p>
+<p class="rvps2"><span class="rvts6">This gives access to the standard LMS settings (outside the scope of this documentation) from the three vertical dots - the </span><a class="rvts11" href="ContextMenu.html">Context Menu</a><span class="rvts6">&nbsp;- at top right of Material in both </span><a class="rvts11" href="Desktop.html">Desktop</a><span class="rvts6">&nbsp;and </span><a class="rvts11" href="Mobile.html">Mobile</a><span class="rvts6">&nbsp;modes.</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem112.png"></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Also accessed from </span><a class="rvts11" href="Information.html">Information</a></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem113.png"></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
 <p></p>
 <p class="rvps4" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour/create-ebooks-for-amazon-kindle">Free Kindle producer</a></p>
 
             </div>
             
-            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved.</div></div>
+            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
         </div>  <!-- /#topic-content -->
     </article>
 
