--- a/html/Settings1.html
+++ b/html/Settings1.html
@@ -186,7 +186,7 @@
                 
 <p></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Settings are accessed from the three vertical dots - the </span><a class="rvts11" href="ContextMenu.html">Context Menu</a><span class="rvts6">&nbsp;- at top right of Material in both Desktop and Mobile modes.</span></p>
+<p class="rvps2"><span class="rvts6">Settings are accessed from the three vertical dots - the </span><a class="rvts11" href="ContextMenu.html">Context Menu</a><span class="rvts6">&nbsp;- at top right of Material in both </span><a class="rvts11" href="Desktop.html">Desktop</a><span class="rvts6">&nbsp;and </span><a class="rvts11" href="Mobile.html">Mobile</a><span class="rvts6">&nbsp;modes.</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem2.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
@@ -206,7 +206,7 @@
 
             </div>
             
-            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved.</div></div>
+            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
         </div>  <!-- /#topic-content -->
     </article>
 
