--- a/html/UsingMaterial.html
+++ b/html/UsingMaterial.html
@@ -185,12 +185,22 @@
             <div class="main-content">
                 
 <p></p>
+<p class="rvps2"><a class="rvts11" href="PlayerSelection.html">Player Selection</a></p>
+<p class="rvps2"><a class="rvts11" href="HomeScreen.html">Home Screen</a><span class="rvts6">&nbsp;/ </span><a class="rvts11" href="Pinning.html">Pinning</a></p>
+<p class="rvps2"><a class="rvts11" href="BrowseArea.html">Browse Area</a></p>
+<p class="rvps2"><a class="rvts11" href="ContextMenu.html">Context Menu</a></p>
+<p class="rvps2"><a class="rvts11" href="GridView.html">Grid View</a></p>
+<p class="rvps2"><a class="rvts11" href="ListView.html">List View</a></p>
+<p class="rvps2"><a class="rvts11" href="QueueArea.html">Queue Area</a></p>
+<p class="rvps2"><a class="rvts11" href="NowPlayingArea.html">Now Playing Area</a></p>
+<p class="rvps2"><a class="rvts11" href="ExpandedNowPlayingArea.html">Expanded Now Playing Area</a></p>
+<p class="rvps2"><a class="rvts11" href="SongInformationArea.html">Song Information Area</a><span class="rvts6">&nbsp;- only available if </span><span class="rvts6">Music &amp; Artist Information plugin (MAI)</span><span class="rvts6">&nbsp;is installed</span></p>
 <p></p>
 <p class="rvps4" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour">Easily create PDF Help documents</a></p>
 
             </div>
             
-            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved.</div></div>
+            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
         </div>  <!-- /#topic-content -->
     </article>
 
