--- a/html/HomeScreen.html
+++ b/html/HomeScreen.html
@@ -188,16 +188,16 @@
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts16">Mobile</span></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem29.png"></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem71.png"></p>
 <p class="rvps2"><span class="rvts16"><br/></span></p>
 <ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
 <li value="1" class="rvps2"><a class="rvts11" href="PlayerSelection.html">Player Selection</a><span class="rvts6">&nbsp;and now playing display</span></li>
 <li value="2" class="rvps2"><span class="rvts6">Volume Control</span></li>
 <li value="3" class="rvps2"><span class="rvts6">Play / Pause</span></li>
 <li value="4" class="rvps2"><a class="rvts11" href="Settings1.html">Settings</a></li>
-<li value="5" class="rvps2"><a class="rvts11" href="BrowseArea.html">Browse</a><span class="rvts6">&nbsp;area - current view</span></li>
-<li value="6" class="rvps2"><a class="rvts11" href="NowPlayingArea.html">Playing</a></li>
-<li value="7" class="rvps2"><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;</span></li>
+<li value="5" class="rvps2"><a class="rvts11" href="BrowseArea.html">Browse</a><span class="rvts6">&nbsp;- current view</span></li>
+<li value="6" class="rvps2"><a class="rvts11" href="NowPlayingArea.html">Playing</a><span class="rvts6">&nbsp;- switches view</span></li>
+<li value="7" class="rvps2"><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;- switches view</span></li>
 </ol>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts16">Desktop</span></p>
@@ -215,7 +215,7 @@
 
             </div>
             
-            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved.</div></div>
+            <div id="topic_footer"><div id="topic_footer_content">Material is copyright &copy; 2019 by Craig Drummond. All Rights Reserved. </div></div>
         </div>  <!-- /#topic-content -->
     </article>
 
