--- a/html/Pinning.html
+++ b/html/Pinning.html
@@ -203,8 +203,20 @@
 <p class="rvps2"><span class="rvts6">You can rename or unpin any pinned item from the Home Screen by clicking its </span><a class="rvts11" href="ContextMenu.html">Context Menu</a></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem98.png"></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Example Home Screen with multiple pinned items</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Spotty</span></p>
+<p class="rvps2"><span class="rvts6">Radio Paradise</span></p>
+<p class="rvps2"><span class="rvts6">Albums </span></p>
+<p class="rvps2"><span class="rvts6">Artists</span></p>
+<p class="rvps2"><span class="rvts6">New Music</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">All pinned then re-ordered via drag-and-drop</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem118.png"></p>
 <p></p>
-<p class="rvps4" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/feature-tour/iphone-website-generation">Free iPhone documentation generator</a></p>
+<p class="rvps7" style="clear: both;"><span class="rvts18">Created with the Personal Edition of HelpNDoc: </span><a class="rvts19" href="https://www.helpndoc.com/feature-tour/iphone-website-generation">Free iPhone documentation generator</a></p>
 
             </div>
             
