--- a/html/PluginSettings.html
+++ b/html/PluginSettings.html
@@ -185,57 +185,30 @@
             <div class="main-content">
                 
 <p></p>
-<p class="rvps2"><a class="rvts11" href="PluginSettings.html#DefaultSkin"><br/></a></p>
-<p class="rvps2"><a class="rvts11" href="PluginSettings.html#ClassicSkin">Classic Skin</a><span class="rvts6">&nbsp;- built into Material (see also </span><a class="rvts11" href="ServerSettings.html">Server Settings</a><span class="rvts6">)</span></p>
-<p class="rvps2"><a class="rvts11" href="PluginSettings.html#DefaultSkin">Default Skin</a></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><a name="ClassicSkin"></a>
-<span class="rvts16">Classic Skin - built into Material</span></p>
-<p class="rvps2"><span class="rvts16"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Open </span><a class="rvts11" href="ServerSettings.html">Server Settings</a></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Scroll down to Plugins and find and select Material Skin</span></p>
-<p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem51.png"></p>
+<p class="rvps2"><span class="rvts6">Scroll down and select Material Skin</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem116.png"></p>
+<p class="rvps2"><span class="rvts14"><br/></span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><a name="ComposerGenre"></a>
 <span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">The Composer genre and Conductor genre fields determine what is shown in the </span><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;and </span><a class="rvts11" href="NowPlayingArea.html">Now Playing</a><span class="rvts6">&nbsp;areas of Material</span></p>
-<p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem52.png"></p>
+<p class="rvps2"><span class="rvts14"><br/></span></p>
+<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem117.png"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">If you make any changes don't forget to Save Settings</span></p>
-<p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><span class="rvts16">Examples</span></p>
+<p class="rvps2"><span class="rvts14"><br/></span></p>
+<p class="rvps2"><span class="rvts14">Examples</span></p>
 <p class="rvps2"><span class="rvts6">Since the Classical genre is listed in both fields the </span><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;and </span><a class="rvts11" href="NowPlayingArea.html">Now Playing</a><span class="rvts6">&nbsp;areas will show Artist * Composer * Conductor * Album if those tags exist in the LMS database,</span></p>
 <p class="rvps2"><span class="rvts6">As Jazz is only shown in Composer genres the </span><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;and </span><a class="rvts11" href="NowPlayingArea.html">Now Playing</a><span class="rvts6">&nbsp;areas will show Artist * Composer * Album if those tags exist in the LMS database</span></p>
 <p class="rvps2"><span class="rvts6">If a tracks' genre does not appear in either field then Artist * Album will appear</span></p>
-<p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><a name="DefaultSkin"></a>
-<span class="rvts16">Default Skin</span></p>
-<p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><span class="rvts6">http://lmsipaddress:9000</span><span class="rvts6">/settings/index.html</span></p>
-<p class="rvps2"><span class="rvts16"><br/></span></p>
-<p class="rvps2"><span class="rvts6">After you have installed Material you will find some settings for it under Settings / Advanced </span></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><a name="ComposerGenre"></a>
-<span class="rvts6">The Composer genre and Conductor genre fields determine what is shown in the </span><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;and </span><a class="rvts11" href="NowPlayingArea.html">Now Playing</a><span class="rvts6">&nbsp;areas of Material</span></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><img alt="" style="padding : 1px;" src="lib/NewItem19.png"></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts16">Examples</span></p>
-<p class="rvps2"><span class="rvts6">Since the Classical genre is listed in both fields the </span><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;and </span><a class="rvts11" href="NowPlayingArea.html">Now Playing</a><span class="rvts6">&nbsp;areas will show Artist * Composer * Conductor * Album if those tags exist in the LMS database,</span></p>
-<p class="rvps2"><span class="rvts6">As Jazz is only shown in Composer genres the </span><a class="rvts11" href="QueueArea.html">Queue</a><span class="rvts6">&nbsp;and </span><a class="rvts11" href="NowPlayingArea.html">Now Playing</a><span class="rvts6">&nbsp;areas will show Artist * Composer * Album if those tags exist in the LMS database</span></p>
-<p class="rvps2"><span class="rvts6">If a tracks' genre does not appear in either field then Artist * Album will appear</span></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts16"><br/></span></p>
+<p class="rvps2"><span class="rvts14"><br/></span></p>
+<p class="rvps2"><span class="rvts14"><br/></span></p>
 <p></p>
-<p class="rvps4" style="clear: both;"><span class="rvts12">Created with the Personal Edition of HelpNDoc: </span><a class="rvts13" href="https://www.helpndoc.com/help-authoring-tool">Easy to use tool to create HTML Help files and Help web sites</a></p>
+<p class="rvps7" style="clear: both;"><span class="rvts18">Created with the Personal Edition of HelpNDoc: </span><a class="rvts19" href="https://www.helpndoc.com/help-authoring-tool">Easy to use tool to create HTML Help files and Help web sites</a></p>
 
             </div>
             
