--- a/html/Introduction.html
+++ b/html/Introduction.html
@@ -192,71 +192,24 @@
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">Documentation by </span><span class="rvts6">Jim Gooch</span><span class="rvts6">&nbsp;(d6jg) using </span><a class="rvts11" href="https://www.helpndoc.com/" target="_blank">HelpNDoc</a></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Notes</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts13">Notes</span></p>
 <p class="rvps2"><span class="rvts6">This documentation will frequently refer to </span><span class="rvts6">http://lmsipaddress:9000/Material</span><span class="rvts6">&nbsp;- substitute your LMS IP address and Port accordingly</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Last modified - </span><span class="rvts6">02/11/2019 13:33</span><span class="rvts6">&nbsp;- based upon Material 1.1.2</span></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Recent Release History</span></p>
-<p class="rvps5"><span class="rvts17"><br/></span></p>
-<h2 class="rvps6"><span class="rvts0"><span class="rvts15">1.2.0 Release - Imminent</span></span></h2>
-<p class="rvps5"><span class="rvts17">A new feature for 1.2 is the ability to set a password (n Material's server settings) to restrict access to alarms, extra player settings, and server settings. If a password is set on the server, a password field will appear in Material's UI settings. If both of these match, the other features are enabled.</span></p>
-<p class="rvps5"><span class="rvts17"><br/></span></p>
-<h2 class="rvps6"><span class="rvts0"><span class="rvts15">1.1.2 Release - 02/11/2019</span></span></h2>
-<p class="rvps5"><a name="post_message_954447"></a>
-<span class="rvts16">Bug fix release. Main changes:</span><br/><span class="rvts16"><br/></span></p>
-<ol style="text-indent: 0px; padding: 0; margin: 0 0 0 40px; list-style-position: outside; list-style-type: decimal;">
-<li value="1" class="rvps5"><span class="rvts16">Fix mobile bottom nav layout with Firefox.</span></li>
-<li value="2" class="rvps5"><span class="rvts16">Supply album sort when using add-all/play-all - so albums are added in the order shown. Requires LMS from 1st Nov - not sure if its in the current nightly build or not.</span></li>
-<li value="3" class="rvps5"><span class="rvts16">Don't show composer if it's the same as artist.</span></li>
-<li value="4" class="rvps5"><span class="rvts16">Allow starting a new search from search results list.</span></li>
-<li value="5" class="rvps5"><span class="rvts16">Fix HTML rendering for biographies, reviews, etc. when called from 'More' menu.</span></li>
-<li value="6" class="rvps5"><span class="rvts16">Fix swipe to change now-playing info tabs on mobile layout.</span></li>
-<li value="7" class="rvps5"><span class="rvts16">Fix references to classic skin modification CSS files in releases. This should make the settings more Material-like.</span></li>
-</ol>
-<p class="rvps5"><span class="rvts6"><br/></span></p>
-<h2 class="rvps6"><span class="rvts0"><span class="rvts15">1.1.1 Release -26/10/2019</span></span></h2>
-<p class="rvps5"><a name="post_message_953937"></a>
-<span class="rvts16">Bug fix release. Changes:</span><br/><span class="rvts16"><br/></span></p>
-<ol style="text-indent: 0px; padding: 0; margin: 0 0 0 40px; list-style-position: outside; list-style-type: decimal;">
-<li value="1" class="rvps5"><span class="rvts16">Fix menu icon missing from grid items.</span></li>
-<li value="2" class="rvps5"><span class="rvts16">If keyboard shortcuts are disabled, dont prevent the event from propagating.</span></li>
-<li value="3" class="rvps5"><span class="rvts16">Use Alt+Arrow instead of just Arrow for shortcuts.</span></li>
-<li value="4" class="rvps5"><span class="rvts16">When remapping icons, check object icon/icon-id property is a string.</span></li>
-<li value="5" class="rvps5"><span class="rvts16">Fix broken expand now-playing button in desktop layout.</span></li>
-<li value="6" class="rvps5"><span class="rvts16">Fix updating queue when remove a selection of tracks.</span></li>
-<li value="7" class="rvps5"><span class="rvts16">Place 'Server settings' back into main menu.</span></li>
-<li value="8" class="rvps5"><span class="rvts16">Fix missing shortcuts from some queue action tooltips.</span></li>
-<li value="9" class="rvps5"><span class="rvts16">Mark icon buttons as non-selectable to try and prevent copy dialog on mobile.</span></li>
-<li value="10" class="rvps5"><span class="rvts16">Tweaks to classic skin used for settings, etc.</span></li>
-<li value="11" class="rvps5"><span class="rvts16">Set focus each time a dialog is shown.</span></li>
-<li value="12" class="rvps5"><span class="rvts16">Customise shortcut text (Ctrl/Command) depending upon whether OS is Mac or not.</span></li>
-</ol>
-<p class="rvps5"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts14"><br/></span></p>
-<p class="rvps2"><span class="rvts14"><br/></span></p>
-<p class="rvps2"><span class="rvts14">Known Issues</span><span class="rvts6">&nbsp;</span></p>
-<p class="rvps2"><span class="rvts6">As at </span><span class="rvts6">02/11/2019 13:33</span></p>
-<p class="rvps2"><span class="rvts6"><br/></span></p>
-<ol style="text-indent: 0px; padding: 0; margin: 0 0 0 24px; list-style-position: outside; list-style-type: decimal;">
-<li value="1" class="rvps2"><span class="rvts12">Drag'n'drop works on iPad, but not iPhone</span></li>
-<li value="2" class="rvps2"><span class="rvts13">Drag'n'drop of the queue does not seem to be functional in Firefox on Android.</span></li>
-<li value="3" class="rvps2"><span class="rvts13">SlimBrowse is not fully implemented; buttons, radios, checkboxes are not handled.</span></li>
-<li value="4" class="rvps2"><span class="rvts13">Pause control issue on Android lock screen</span></li>
-</ol>
-<p class="rvps2"><span class="rvts13"><br/></span></p>
-<p class="rvps4"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Last modified - </span><span class="rvts6">02/11/2019 14:32</span><span class="rvts6">&nbsp;- based upon Material 1.1.2</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
+<h1 class="rvps4"><span class="rvts0"><span class="rvts12">Release History</span></span></h1>
+<p class="rvps2"><a class="rvts11" href="https://raw.githubusercontent.com/CDrummond/lms-material/master/ChangeLog" target="_blank">https://raw.githubusercontent.com/CDrummond/lms-material/master/ChangeLog</a></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
+<h1 class="rvps4"><span class="rvts0"><span class="rvts12">Known Issues</span></span></h1>
+<p class="rvps2"><a class="rvts11" href="https://github.com/CDrummond/lms-material/issues" target="_blank">https://github.com/CDrummond/lms-material/issues</a></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p></p>
-<p class="rvps7" style="clear: both;"><span class="rvts18">Created with the Personal Edition of HelpNDoc: </span><a class="rvts19" href="https://www.helpndoc.com">Easy EBook and documentation generator</a></p>
+<p class="rvps5" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com">Easy EBook and documentation generator</a></p>
 
             </div>
             
