--- a/html/AndroidUsers.html
+++ b/html/AndroidUsers.html
@@ -188,10 +188,13 @@
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6">To run Material in full screen app mode first open it in your default browser - </span><span class="rvts6">http://lmsipaddress:9000/Material/Mobile</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Once open do "add to home screen" from the menu</span></p>
+<p class="rvps2"><img width="540" height="1110" alt="" style="padding : 1px;" src="lib/Screenshot_20191104-141453_Chrome.jpg"></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><span class="rvts6">Once open do "add to home screen" from the three dots menu</span></p>
+<p class="rvps2"><span class="rvts6"><br/></span></p>
+<p class="rvps2"><img width="540" height="1110" alt="" style="padding : 1px;" src="lib/Screenshot_20191104-141611_Chrome.jpg"></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">&lt;screenshot required&gt;</span></p>
 <p></p>
 <p class="rvps5" style="clear: both;"><span class="rvts14">Created with the Personal Edition of HelpNDoc: </span><a class="rvts15" href="https://www.helpndoc.com/create-epub-ebooks">Full-featured EPub generator</a></p>
 
