--- a/html/Introduction.html
+++ b/html/Introduction.html
@@ -173,7 +173,7 @@
                         
                     </ol>
                     <div class="nav-arrows">
-                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="Desktop.html" title="Desktop" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
+                        <div class="btn-group btn-group-xs" role="group"><a class="btn btn-default" href="GettingStarted.html" title="Getting Started" role="button"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></div>
                     </div>
                 </div> 
             
@@ -198,7 +198,7 @@
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
-<p class="rvps2"><span class="rvts6">Last modified - </span><span class="rvts6">02/11/2019 14:32</span><span class="rvts6">&nbsp;- based upon Material 1.1.2</span></p>
+<p class="rvps2"><span class="rvts6">Last modified - </span><span class="rvts6">05/11/2019 11:21</span><span class="rvts6">&nbsp;- based upon Material 1.1.2</span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
 <p class="rvps2"><span class="rvts6"><br/></span></p>
